--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "0.0.1",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve",
+        "start": "node server.js",
         "build": "ng build",
         "test": "ng test",
-        "lint": "ng lint"
+        "lint": "ng lint",
+        "heroku-postbuild": "ng build --aot --prod"
     },
     "private": false,
     "dependencies": {
@@ -22,7 +23,8 @@
         "@angular/router": "~10.1.1",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
-        "zone.js": "~0.10.2"
+        "zone.js": "~0.10.2",
+        "express": "^4.17.1"
     },
     "devDependencies": {
         "@angular-devkit/build-angular": "~0.1001.1",
@@ -32,5 +34,9 @@
         "ts-node": "~8.3.0",
         "tslint": "~6.1.0",
         "typescript": "~4.0.2"
+    },
+    "engines": {
+        "node": "13.14.0",
+        "npm": "6.14.4"
     }
 }
